--- a/_includes/project-row.html
+++ b/_includes/project-row.html
@@ -10,7 +10,7 @@
   <div class="six wide column">
     <h2 class="header no-bottom">{{ include.page.title }}</h2>
 <!--     <p class="">{{ include.page.date }}</p> -->
-    <p>{{ include.page.summary }}</p>
+    <p><br>{{ include.page.summary }}</p>
 
     <p>
     <div style="text-align: center" class="ui mini labels">
